[project]
name = "summer-internship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "nibabel>=5.4.2",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pyswarms>=1.3.0",
    "pywavelets>=1.9.0",
    "requests>=2.34.2",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
]
